crates/aura-app/tests/ui/exact_operation_lifecycle_private.rs
fn main() {
    let _ = aura_app::ui::workflows::semantic_facts::publish_exact_operation_lifecycle;
}
